Add scalingfactor to saved properties﻿